<?xml version="1.0" encoding="utf-8"?>



<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_activity_background_wg">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.chris.popularMovies2.MovieDetailActivity">

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/img_desc_backdrop"
            android:scaleType="fitCenter"
            app:layout_constraintDimensionRatio="H,500:281"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_movie_title"
            style="@style/ShadowedText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/iv_backdrop"
            app:layout_constraintBottom_toBottomOf="@id/iv_backdrop"
            app:layout_constraintVertical_bias="0.015"
            app:layout_constraintStart_toStartOf="@+id/iv_backdrop"
            app:layout_constraintTop_toTopOf="@+id/iv_backdrop" />

        <include layout="@layout/details"
            android:id="@+id/details_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/iv_backdrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <include layout="@layout/synopsis"
            android:id="@+id/synopsis_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/details_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/youtube_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/synopsis_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <Button
            android:id="@+id/btn_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_trailer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/youtube_player"
            app:layout_constraintBottom_toBottomOf="@id/youtube_player"
            android:visibility="invisible"
            android:onClick="watchTrailer"
            />

        <include layout="@layout/reviews"
            android:id="@+id/reviews_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtube_player"
            android:visibility="gone"
            />

        <ProgressBar
            android:id="@+id/pb_loading_backdrop"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/iv_backdrop"
            app:layout_constraintBottom_toBottomOf="@id/iv_backdrop"
            app:layout_constraintStart_toStartOf="@id/iv_backdrop"
            app:layout_constraintEnd_toEndOf="@id/iv_backdrop"/>




        <ProgressBar
            android:id="@+id/pb_loading_details"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_movie_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_msg"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.constraint.Group
            android:id="@+id/details_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="iv_backdrop, tv_movie_title,
                details_layout, synopsis_layout"
            android:visibility="invisible"/>

    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>